--- a/landingpage.html
+++ b/landingpage.html
@@ -29,10 +29,10 @@
             </p>
             <button>Sign up</button>
         </div>
-        <div class="img"><img alt="placeholder"></div>
+        <div class="img"><img>this is a placeholder for an image</div>
     </div>
     <div class="info">
-        <span class="random-info">Some random information</span>
+        <span class="random-info">Some random information.</span>
         <div class="grid">
             <div class="card">
                 <img class="sm-img">
