--- a/landingpage.html
+++ b/landingpage.html
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="hero">
-        <div>
+        <div class="hero-text">
             <h1 class="maintext">This website is awesome</h1>
             <p class="subtext">lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                 ut labore et
@@ -54,10 +54,8 @@
     </div>
     <div class="quote">
         <p>lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur.</p>
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+        <div class="author">- Thor, God of Thunder</div>
     </div>
     <div class="call">
         <div>
@@ -68,7 +66,7 @@
     </div>
     <div class="footer">
         <h4>Copyright 2025</h4>
-
+    </div>
 </body>
 
 </html>
