completed, add css to bottom half of site

--- a/landingpage.html
+++ b/landingpage.html
@@ -52,10 +52,12 @@
             </div>
         </div>
     </div>
-    <div class="quote">
-        <p>lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+    <div class="quote-section">
+        <div class="quote">
+            <p>lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
         <div class="author">- Thor, God of Thunder</div>
+        </div>
     </div>
     <div class="call">
         <div>
@@ -65,7 +67,7 @@
         <button class="bottom-button">Sign up</button>
     </div>
     <div class="footer">
-        <h4>Copyright 2025</h4>
+        <h4>Copyright The Odin Project 2025</h4>
     </div>
 </body>
 
