--- a/landingpage.html
+++ b/landingpage.html
@@ -61,7 +61,7 @@
     </div>
     <div class="call">
         <div>
-            <h3>Call to action</h3>
+            <h3>Call to action. Its time!</h3>
             <p>Sign up for our product by clicking that button right over there!</p>
         </div>
         <button class="bottom-button">Sign up</button>
